Fix the layout problems caused by the previous commit on OC and NC13
Some of the layout adjustments made for Nextcloud 25 were not
compatible with the oldest supported Nextcloud version 13 or any of the
ownCloud versions. Hence, the problematic adjustments are now disabled
when using the "legacy layout structure".

--- a/css/music-tablet.css
+++ b/css/music-tablet.css
@@ -20,7 +20,7 @@
 		padding-top: 66px;
 	}
 
-	div.app-music #app-navigation:not(.hidden) + #app-content {
+	div.app-music:not(.legacy-layout) #app-navigation:not(.hidden) + #app-content {
 		left: 0;
 	}
 }
